objects/Service_Contract_Term__c.object
<CustomObject>
    <fields>
        <fullName>Enhanced_Electrical_Package_Price__c</fullName>
        <label>Enhanced Electrical Package Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Miles__c</fullName>
        <label>Miles</label>
        <picklist>
            <picklistValues>
                <fullName>12,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>48,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50,000</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Months__c</fullName>
        <label>Months</label>
        <picklist>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>48</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Provider__c</fullName>
        <label>Provider</label>
        <picklist>
            <picklistValues>
                <fullName>AUL</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vehicle_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Vehicle</label>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipLabel>Service Contract Terms</relationshipLabel>
        <relationshipName>Service_Contract_Terms</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Service Contract Term</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Service Contract Term Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Contract Terms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>